coohua商业平台架构演进

--- a/others/酷划在线商业平台技术架构演进历程.md
+++ b/others/酷划在线商业平台技术架构演进历程.md
@@ -35,7 +35,7 @@
 
 ![广告平台架构演进3](http://image.feathers.top/image/广告平台架构演进3.png)
 
-## 直客代理商-倒排检索引擎
+## 阶段4：直客代理商-倒排检索引擎
 
 这一阶段，扩展直客代理商广告主，需要新的广告投放平台(ECP平台)，同时考虑到广告量的扩大可能会对广告检索带来压力，研发了倒排检索引擎（同样以jar包形式存在）。
 
@@ -43,13 +43,13 @@
 
 ![广告平台架构演进4](http://image.feathers.top/image/广告平台架构演进4.png)
 
-## 服务化、服务性能监控
+## 阶段5：服务化、服务性能监控
 
 这个阶段各个服务单独部署，通过motan完成rpc调用。监控Profile的收集和报表展示由Prometheus+Grafana完成。
 
 ![广告平台架构演进5](http://image.feathers.top/image/广告平台架构演进5.png)
 
-## 广告公共服务，CTR服务
+## 阶段6：广告公共服务，CTR服务
 
 这一阶段进一步将广告公共的部分提炼、抽象，形成公共服务，以motan服务部署。
 
@@ -57,13 +57,13 @@
 
 ![广告平台架构演进6](http://image.feathers.top/image/广告平台架构演进6.png)
 
-## 商业平台容器化
+## 阶段7：商业平台容器化
 
 为提高资源的利用率，节省成本。商业平台进行了容器化。以Docker + K8s的方式部署。
 
 ![广告平台架构演进7](http://image.feathers.top/image/广告平台架构演进7.png)
 
-## 商业平台中台化
+## 阶段8：商业平台中台化
 
 为啥要将平台中台化。首先聊一下中台的作用是什么，中台为前端而生的。在如今互联网时代，一个公司在商业战场上的成败越来越依赖能否快速响应用户的诉求。而前端是直接与用户接触的一端，传统的后台系统无法适应前端的快速变化，中台就是为了适应前端的快速变化而生的。
 
