--- a/others/酷划在线商业平台技术架构演进历程.md
+++ b/others/酷划在线商业平台技术架构演进历程.md
@@ -77,6 +77,9 @@
 
 由于商业平台内部的中台和后台对于业务前端是无感知的，所以商业平台的前台就是要改造成整个投放系统中台的部分了。
 
+其他的中台还有：用户中台、账户中台、金币中台、任务中心中台。
 
+此阶段的架构图如下所示：
 
-其他的中台还有：用户中台、账户中台、金币中台、任务中心中台
+![广告中台架构](http://image.feathers.top/image/%E5%B9%BF%E5%91%8A%E4%B8%AD%E5%8F%B0%E5%BB%BA%E8%AE%BE.png)
+
