关于中台的思考与总结

--- a/others/关于中台的思考与总结.md
+++ b/others/关于中台的思考与总结.md
@@ -47,5 +47,10 @@
 
 刷视频、恐龙世界、王牌消消乐是各业务方，可以看到，他们只需要接入中台SDK，即可享受下面的一整套服务和业务能力。
 
+#### 5 总结
+
+总上所述，中台不同于平台。通常平台可能会这么划分：广告平台、数据平台、交易平台等，但中台通常需要聚合很多平台的能力，拿我们的广告中台来说，他聚合了广告平台、数据平台，同时囊括了客户端SDK，通过SDK链接了广告平台和数据平台。
+
+**所以中台应该是吸收各平台和基础架构能力，构建出一整套业务闭环为企业赋能。**
 
 
